wayland/dmabuf: Do not send DRM_FORMAT_MOD_INVALID for a format if no working modifiers were detected
If we check for working modifiers and know we don't have any for a certain format this apparently implies that the format is not supported at all. For me this is the case for DRM_FORMAT_XRGB16161616F
and DRM_FORMAT_ARGB16161616F
, on an Intel as well as an AMD system. We still send DRM_FORMAT_MOD_INVALID
in that case, however we should just not send the format at all - that's how other compositors handle the case.
We should probably also always check that - independently of whether kms-modifiers
is enabled or not.